修改新闻中心图片

--- a/news.html
+++ b/news.html
@@ -210,7 +210,7 @@
         <div class="container">
           <div class="news-list">
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image01.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -218,7 +218,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image02.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -226,7 +226,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image03.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -234,7 +234,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image04.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -242,7 +242,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image05.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -250,7 +250,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image06.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -258,7 +258,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image07.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -266,7 +266,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image08.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -274,7 +274,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image09.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -282,7 +282,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image10.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -290,7 +290,7 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image11.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
@@ -298,7 +298,31 @@
               </div>
             </div>
             <div class="news-item">
-              <img src="assets/images/News/占位图.jpg" alt="" />
+              <img src="assets/images/News/Image12.png" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/Image13.png" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/Image14.png" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/Image15.png" alt="" />
               <div class="news-content">
                 <div class="news-text">
                   新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
