--- a/service.html
+++ b/service.html
@@ -808,7 +808,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <div class="wpo-about-img">
+              <div class="wpo-right-img">
                 <img src="assets/images/Standards/section2_1.jpg" alt="" />
               </div>
             </div>
