修改首页轮播图

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <div class="swiper-slide">
               <div
                 class="slide-inner slide-bg-image"
-                data-background="assets/images/slider/slide-1.jpg"
+                data-background="assets/images/index/index1.png"
               >
                 <!-- <div class="gradient-overlay"></div> -->
                 <div class="container-fluid">
@@ -494,13 +494,13 @@
             <div class="swiper-slide">
               <div
                 class="slide-inner slide-bg-image"
-                data-background="assets/images/slider/slide-1.jpg"
+                data-background="assets/images/index/index2.png"
               >
                 <!-- <div class="gradient-overlay"></div> -->
                 <div class="container-fluid">
                   <div class="slide-content">
                     <div data-swiper-parallax="400" class="slide-title">
-                      <h2>纯净生态环境，源于自然的馈赠</h2>
+                      <h2>道地本草，凝聚天地的精华</h2>
                     </div>
 
                     <div class="clearfix"></div>
@@ -515,12 +515,12 @@
             <div class="swiper-slide">
               <div
                 class="slide-inner slide-bg-image"
-                data-background="assets/images/slider/slide-1.jpg"
+                data-background="assets/images/index/index3.png"
               >
                 <div class="container-fluid">
                   <div class="slide-content">
                     <div data-swiper-parallax="300" class="slide-title">
-                      <h2>纯净生态环境，源于自然的馈赠</h2>
+                      <h2>匠心与科技，守护健康的承诺</h2>
                     </div>
                     <div data-swiper-parallax="400" class="slide-text"></div>
                     <div class="clearfix"></div>
