--- a/news.html
+++ b/news.html
@@ -68,6 +68,14 @@
         object-fit: cover;
         display: block;
       }
+
+      /* 视频样式 - 保持与图片相同的展示效果 */
+      .wpo-news-section .news-list .news-item iframe {
+        width: 100%;
+        height: 200px;
+        display: block;
+        border: none;
+      }
       .wpo-news-section .news-list .news-item .news-content {
         /* 外层容器：只负责内边距和边框 */
         padding: 24px;
